# horza

./: .gitignore  CMakeLists.txt  OverviewPassElement.cpp  OverviewPassElement.hpp  README.md  config.hpp  hyprpm.toml  main.cpp  overview.cpp  overview.hpp  overview_capture.cpp  overview_input.cpp  overview_render.cpp  overview_workspace_sync.cpp  plugin_runtime.cpp  plugin_runtime.hpp
